Bug 1211970 - "Muted errors in workers are not correctly reported to the console". r=bz, a=lizzard